# DB_sample

./: crud_test.py  db_config.py  example_env.py  peewee_db.sqlite  pyproject.toml
